# VReader

./: .drone.yml  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  banner.xcf  pyproject.toml  shell.nix  tailwind.config.js
vreader/: __init__.py  config.py  oai.py  video.py
vreader/api/: __init__.py  common.py  v1.py
vreader/static/: manifest.json  style.css  tailwind.css
vreader/templates/: 404.html  article.html  error.html  index.html
