[project]
name = "vreader"
version = "0.0.1"
description = "Turn videos into articles!"
authors = [
  { name = "Evan Reichard", email = "evan@reichard.io" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0",
  "openai==0.28.1",
  "openai[datalib]==0.28.1",
  "click",
  "yt-dlp",
  "markdown",
  "html-sanitizer"
]

[project.scripts]
vreader = "vreader:cli"

[tool.setuptools.packages]
find = {}
